--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.app-bar {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.padding-2-i {
+    padding: 0.5rem !important;
+}
